@@ -1,6 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="ftw.file">
 
     <browser:page
@@ -24,5 +25,10 @@
         class=".download.DownloadFileView"
         permission="zope2.View"
         />
+
+    <configure zcml:condition="installed ftw.activity">
+      <adapter factory=".activity.FileRepresentation"
+               provides="ftw.activity.interfaces.IActivityRepresentation" />
+    </configure>
 
 </configure>
